// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldSelect 1`] = `
.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  width: 18px;
  height: 18px;
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #707781;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c9 svg {
  height: 100%;
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  cursor: text;
  font-size: 0.875rem;
}

.c6 .c11 {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c6 .c11 span {
  padding: 0 0.5rem;
}

.c6 input {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  padding: 0 0.5rem;
}

.c6 input::-webkit-search-decoration,
.c6 input::-webkit-search-cancel-button,
.c6 input::-webkit-search-results-button,
.c6 input::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 input::-webkit-input-placeholder {
  color: #939BA5;
}

.c6 input::-moz-placeholder {
  color: #939BA5;
}

.c6 input:-ms-input-placeholder {
  color: #939BA5;
}

.c6 input::placeholder {
  color: #939BA5;
}

.c6:hover {
  border-color: #C1C6CC;
}

.c6:focus,
.c6:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c0 .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: input;
}

.c0 .c10 {
  grid-area: messages;
}

.c0 > .c1 {
  grid-area: label;
  line-height: 1rem;
  padding-bottom: 0.5rem;
}

.c0 .c13 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c12 {
  margin-top: 0.5rem;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-auto-flow: column dense;
  grid-gap: 0.25rem;
  justify-items: center;
  max-height: 1.9rem;
}

.c7 .c5 {
  cursor: default;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    htmlFor="thumbs-up"
    id="thumbs-up-labelledby"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="listbox-thumbs-up"
      className="c4 "
      display="flex"
      id="thumbs-up"
      name="thumbsUp"
      role="combobox"
      width="100%"
    >
      <div
        className="c5 c6 c7"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <input
          aria-autocomplete="both"
          aria-describedby="thumbs-up-describedby"
          aria-labelledby="thumbs-up-labelledby"
          autoComplete="off"
          id="listbox-thumbs-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <svg
              fill="currentColor"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <title>
                Caret Down
              </title>
              <path
                d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c10 "
    id="thumbs-up-describedby"
  />
</div>
`;

exports[`A FieldSelect with an error validation aligned to the right 1`] = `
.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  width: 18px;
  height: 18px;
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #707781;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 svg {
  height: 100%;
  width: 100%;
}

.c9 {
  width: 20px;
  height: 20px;
  margin-right: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #CC1F36;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c9 svg {
  height: 100%;
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  cursor: text;
  font-size: 0.875rem;
  border-color: #ED3B53;
}

.c6 .c15 {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c6 .c15 span {
  padding: 0 0.5rem;
}

.c6 input {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  padding: 0 0.5rem;
}

.c6 input::-webkit-search-decoration,
.c6 input::-webkit-search-cancel-button,
.c6 input::-webkit-search-results-button,
.c6 input::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 input::-webkit-input-placeholder {
  color: #939BA5;
}

.c6 input::-moz-placeholder {
  color: #939BA5;
}

.c6 input:-ms-input-placeholder {
  color: #939BA5;
}

.c6 input::placeholder {
  color: #939BA5;
}

.c6:hover {
  border-color: #C1C6CC;
}

.c6:focus,
.c6:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6:hover {
  border-color: #CC1F36;
}

.c6:focus,
.c6:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
}

.c14 {
  font-size: 0.75rem;
  color: #CC1F36;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c0 .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: input;
}

.c0 .c12 {
  grid-area: messages;
}

.c0 > .c1 {
  grid-area: label;
  line-height: 1rem;
  padding-bottom: 0.5rem;
}

.c0 .c16 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c13 {
  margin-top: 0.5rem;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-auto-flow: column dense;
  grid-gap: 0.25rem;
  justify-items: center;
  max-height: 1.9rem;
}

.c10 {
  background: #DEE1E5;
  height: 70%;
  width: 1px;
}

.c7 .c5 {
  cursor: default;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    htmlFor="thumbs-up"
    id="thumbs-up-labelledby"
  >
    👍
  </label>
  <div
    className="c3 "
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="listbox-thumbs-up"
      className="c4 "
      display="flex"
      id="thumbs-up"
      name="thumbsUp"
      role="combobox"
      width="100%"
    >
      <div
        className="c5 c6 c7"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <input
          aria-autocomplete="both"
          aria-describedby="thumbs-up-describedby"
          aria-invalid={true}
          aria-labelledby="thumbs-up-labelledby"
          autoComplete="off"
          id="listbox-thumbs-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <svg
              fill="currentColor"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <title>
                Circle Info
              </title>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="c10"
          />
          <div
            className="c11"
          >
            <svg
              fill="currentColor"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <title>
                Caret Down
              </title>
              <path
                d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c12 "
    id="thumbs-up-describedby"
  >
    <div
      className="c13 c14"
    >
      This is an error
    </div>
  </div>
</div>
`;
